<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundLayer" />


            <TextView
                android:id="@+id/judulApp"
                style="@style/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/trip_to"
                app:layout_constraintBottom_toTopOf="@+id/judul2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/judul2"
                style="@style/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountain"
                app:layout_constraintBottom_toTopOf="@+id/edt_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judulApp" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/edt_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/judul2"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin"
                app:layout_constraintEnd_toEndOf="@+id/edt_username"
                app:layout_constraintStart_toStartOf="@+id/edt_username"
                app:layout_constraintTop_toBottomOf="@+id/edt_username"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/btn_login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintStart_toStartOf="@+id/edt_password"
                app:layout_constraintTop_toBottomOf="@+id/edt_password" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>