<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_halaman"
    tools:context=".guide_porter.GuidePorter">

    <TextView
        android:id="@+id/headerGuidePorter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_header"
        android:gravity="center"
        android:text="@string/trip_to_mountain"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="Apakah anda perlu bantuan saya?"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerGuidePorter" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imagePorter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/poster"
            app:layout_constraintEnd_toStartOf="@+id/imageGuide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageGuide"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tour_guide_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imagePorter"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTidak"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/tidak"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnYa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePorter" />

        <Button
            android:id="@+id/btnYa"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/ya"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnTidak"
            app:layout_constraintTop_toTopOf="@+id/btnTidak" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>